<?xml version="1.0" encoding="utf-8"?>
<!--
    SPDX-FileCopyrightText: 2023-2025 Andrew Gunnerson
    SPDX-License-Identifier: GPL-3.0-only
-->
<resources>
    <!-- Preference headers -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_behavior">Behavior</string>
    <string name="pref_header_permissions">Permissions</string>
    <string name="pref_header_os">OS</string>
    <string name="pref_header_certificates">Certificates</string>
    <string name="pref_header_about">About</string>
    <string name="pref_header_debug">Debug</string>

    <!-- General preferences -->
    <string name="pref_check_for_updates_name">Check for updates</string>
    <string name="pref_check_for_updates_desc">Schedule a check for new OTA updates.</string>
    <string name="pref_ota_source_name">OTA installation source</string>
    <string name="pref_ota_source_none">No installation source set.</string>
    <string name="pref_certificate_name">Certificate %1$s (%2$s)</string>
    <string name="pref_certificate_desc_subject">Subject: %1$s</string>
    <string name="pref_certificate_desc_serial">Serial: %1$s</string>
    <string name="pref_certificate_desc_type">Type: %1$s</string>

    <!-- Behavior preferences -->
    <string name="pref_automatic_check_name">Automatically check for updates</string>
    <string name="pref_automatic_check_desc">Automatically check for new updates in the background.</string>
    <string name="pref_automatic_install_name">Automatically install updates</string>
    <string name="pref_automatic_install_desc">Automatically install new updates in the background.</string>
    <string name="pref_unmetered_only_name">Require unmetered network</string>
    <string name="pref_unmetered_only_desc">Only allow updates to be downloaded over unmetered network connections (eg. Wi-Fi).</string>
    <string name="pref_battery_not_low_name">Require sufficient battery level</string>
    <string name="pref_battery_not_low_desc">Only allow updates to be installed if the battery level is not critical.</string>
    <string name="pref_skip_postinstall_name">Skip optional post-install scripts</string>
    <string name="pref_skip_postinstall_desc">Skip running post-install operations that are marked as optional in the OTA. This usually skips the dexopt operation, which precompiles app bytecode for faster loading.</string>

    <!-- Permission preferences -->
    <string name="pref_allow_local_network_name">Allow local network access</string>
    <string name="pref_allow_local_network_desc">Needed to connect to hosts on the local network.</string>

    <!-- OS information preferences -->
    <string name="pref_android_version_name">Android version</string>
    <string name="pref_security_patch_level_name">Security patch level</string>
    <string name="pref_fingerprint_name">Fingerprint</string>
    <string name="pref_vbmeta_digest_name">vbmeta digest</string>
    <string name="pref_boot_slot_name">Boot slot</string>
    <string name="pref_bootloader_status_name">Bootloader status</string>
    <string name="pref_bootloader_status_unknown">Unknown</string>
    <string name="pref_bootloader_status_unlocked">Unlocked</string>
    <string name="pref_bootloader_status_locked">Locked</string>
    <string name="pref_bootloader_status_oemlock_carrier_allowed">OEM unlock allowed by carrier</string>
    <string name="pref_bootloader_status_oemlock_carrier_blocked">OEM unlock blocked by carrier</string>
    <string name="pref_bootloader_status_oemlock_user_allowed">OEM unlock allowed by user</string>
    <string name="pref_bootloader_status_oemlock_user_blocked">OEM unlock blocked by user</string>

    <!-- Certificate preferences -->
    <string name="pref_no_certificates_name">No certificates found</string>
    <string name="pref_no_certificates_desc">No valid certificates were found in %1$s.</string>

    <!-- About "preference" -->
    <string name="pref_version_name">Version</string>

    <!-- Debug preferences -->
    <string name="pref_open_log_dir_name">Open log directory</string>
    <string name="pref_open_log_dir_desc">Open the log directory in the system file manager (DocumentsUI).</string>
    <string name="pref_allow_reinstall_name">Allow reinstall</string>
    <string name="pref_allow_reinstall_desc">If the latest OTA matches the current OS fingerprint, treat it as an update. This may cause continuous reinstalls if automatic updates are enabled.</string>
    <string name="pref_revert_completed_name">Revert completed update</string>
    <string name="pref_revert_completed_desc">This is only possible after an update completes, but before rebooting. This is meant for debugging purposes only.</string>
    <string name="pref_install_csig_cert_name">Install csig certificate</string>
    <string name="pref_install_csig_cert_desc">The certificate is only used for verifying <tt>.csig</tt> files. This is not necessary when the certificate exists in the system\'s <tt>otacerts.zip</tt>. Long press the certificate to remove it.</string>
    <string name="pref_pin_network_id_name">Pin to specific network ID</string>
    <string name="pref_pin_network_id_desc">This guarantees that traffic will not leak to an unexpected (eg. metered) network. When this is disabled, the unmetered network option will have no effect if the network changes during the download. Disabling this is necessary when using WireGuard\'s kernel mode because it breaks Android\'s network APIs.</string>

    <!-- Dialogs -->
    <string name="dialog_ota_source_title">@string/pref_ota_source_name</string>
    <string name="dialog_ota_source_server_url_message">Enter the base URL for fetching OTA update metadata (excluding the filename).</string>
    <string name="dialog_ota_source_server_url_error_bad_protocol">Only http:// and https:// URLs are supported.</string>
    <string name="dialog_ota_source_server_url_error_malformed">Not a valid URL.</string>
    <string name="dialog_ota_source_local_path_message">Select the directory containing the OTA update metadata.</string>
    <string name="dialog_ota_source_local_path_select_directory">Select directory</string>
    <string name="dialog_ota_source_use_server_url">Use server URL</string>
    <string name="dialog_ota_source_use_local_path">Use local path</string>

    <!-- Notifications -->
    <string name="notification_channel_persistent_name">Background services</string>
    <string name="notification_channel_persistent_desc">Persistent notification for update progress</string>
    <string name="notification_channel_check_name">Update check alerts</string>
    <string name="notification_channel_check_desc">Alerts about updates being available</string>
    <string name="notification_channel_failure_name">Failure alerts</string>
    <string name="notification_channel_failure_desc">Alerts for errors during update</string>
    <string name="notification_channel_success_name">Success alerts</string>
    <string name="notification_channel_success_desc">Alerts for successful update</string>
    <string name="notification_channel_cleanup_name">Cleanup alerts</string>
    <string name="notification_channel_cleanup_desc">Alerts for successful cleanup after reboot</string>
    <string name="notification_state_init">Initializing OTA updater</string>
    <string name="notification_state_check">Checking for OTA updates</string>
    <string name="notification_state_install">Installing OTA update</string>
    <string name="notification_state_verify">Verifying OTA update</string>
    <string name="notification_state_finalize">Finalizing OTA update</string>
    <string name="notification_state_cleanup">Cleaning up OTA update</string>
    <string name="notification_update_init_failed">Failed to initialize OTA updater</string>
    <string name="notification_update_ota_available">OTA update is available</string>
    <string name="notification_update_ota_unnecessary">OS is already up to date</string>
    <string name="notification_update_ota_succeeded">Successfully installed OTA update</string>
    <string name="notification_update_ota_cancelled">OTA update process was cancelled</string>
    <string name="notification_update_ota_reverted">Successfully reverted OTA update</string>
    <string name="notification_update_ota_failed">Failed to install OTA update</string>
    <string name="notification_update_ota_failed_incremental">Retry installing this incremental OTA again or try installing the full OTA instead.</string>
    <string name="notification_broken_network_api_title">Cannot use network pinning</string>
    <string name="notification_broken_network_api_message">Custota was blocked from pinning network connections to a specific network ID. To work around this, see the \"%s\" option after enabling debug mode by long-pressing Custota\'s version number.</string>
    <string name="notification_action_install">Install</string>
    <string name="notification_action_pause">Pause</string>
    <string name="notification_action_resume">Resume</string>
    <string name="notification_action_cancel">Cancel</string>
    <string name="notification_action_reboot">Reboot</string>
    <string name="notification_action_retry">Retry</string>
    <string name="notification_action_retry_full">Try full OTA</string>

    <!-- Alerts -->
    <string name="action_details">Details</string>
    <string name="dialog_error_details_title">Error details</string>
    <string name="alert_system_cert_load_failure">Failed to load system OTA certificate.</string>
    <string name="alert_csig_cert_load_failure">Failed to load csig certificate.</string>
    <string name="alert_browser_not_found">No web browser is available.</string>
    <string name="alert_documentsui_not_found">Android\'s builtin file manager (DocumentsUI) is unavailable.</string>
</resources>
